--- a/index.html
+++ b/index.html
@@ -1,93 +1,95 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="en">
 
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-        crossorigin="anonymous">
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='dura.css') }}">
+        <!-- documentation at http://getbootstrap.com/docs/4.1/, alternative themes at https://bootswatch.com/ -->
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
 
-    <title>CPSC 276/376</title>
+        <link href="gear.ico" rel="icon">
+
+        <link href="styles.css" rel="stylesheet">
+
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+        <title>COG</title>
+
 </head>
 
-<body>
-    <!-- As a link -->
-    <nav class="navbar navbar-dark shadow p-3 mb-5" style="background-color: #00356b;">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Intro to Web Tech</a>
-        </div>
-    </nav>
-
-    <div class="row mx-auto">
-        <div class="col">
-            <h4 class="ms-1">Browse</h4>
-            <div class="list-group" id="list">
-            </div>
-        </div>
-        <div class="col">
-            <div id="main" class="container">
-                <div class="mb-4">
-                    <label for="Image" class="form-label">
-                        <h4 class="ms-1">Image</h4>
-                    </label>
-                    <input class="form-control" type="file" accept="image/*" id="formFile" onchange="preview(event)">
+    </head>
+    <br><br><br>
+    <body class="background">
+            <nav class="navbar navbar-expand-md navbar-light border-bottom fixed-top scrolling-navbar background">
+                <a class="navbar-brand" href="index.html"><span style="color: gray;">COG</span></a>
+                <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbar">
+                        <ul class="navbar-nav ml-auto mt-2">
+                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">QR Code Generator</a></li>
+                            <li class="nav-item"><a class="nav-link" href="https://en.wikipedia.org/wiki/Dura-Europos">Other Resources</a></li>
+                        </ul>
                 </div>
-                <img id="canvas" class="img-fluid" src="">
-                <div id="display" style="width:auto;"></div>
-                <div class="d-grid gap-2 mx-auto">
-                    <button class="btn btn-primary mt-3" disabled onclick="uploadData()">Save</button>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <h4 class="ms-1">Annotation</h4>
-            <div class="form-check" id="people">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="radioPeople" checked>
-                <label class="form-check-label" for="flexRadioDefault1">
-                    <p class="text-primary fw-bold">People (&times;) &emsp;</p>
-                </label>
-                <!-- <span class="badge bg-primary">
-                    Primary
-                </span> -->
-            </div>
-            <div class="form-check" id="painting">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="radioPainting">
-                <label class="form-check-label" for="flexRadioDefault2">
-                    <p class="text-success fw-bold">Painting (&plus;) &emsp;</p>
-                </label>
-            </div>
-            <div class="form-check" id="textile">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="radioTextile">
-                <label class="form-check-label" for="flexRadioDefault3">
-                    <p class="text-danger fw-bold">Textile (&lowast;) &emsp;</p>
-                </label>
-            </div>
-            <div class="form-check" id="container">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="radioContainer">
-                <label class="form-check-label" for="flexRadioDefault4">
-                    <p class="text-warning fw-bold">Container (&sim;) &emsp;</p>
-                </label>
-            </div>
-            <div class="form-check" id="jewelry">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="radioJewelry">
-                <label class="form-check-label" for="flexRadioDefault5">
-                    <p class="text-info fw-bold">Jewelry (&minus;) &emsp;</p>
-                </label>
-            </div>
-        </div>
-    </div>
+            </nav>
 
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
-    <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='dura.js') }}"></script>
-</body>
+        <div class="vertical-center">
+            <main class="container p-5">
+
+                <div class="wid">
+                    <p>COG (Cellphone Object Guide) is an easy to use interface which... </p>
+                    </div>
+                    <div class="card-deck cardfontcolor mb-1 d-flex justify-content-center">
+                    <div class="card mx-5">
+                        <a href="scratch_object.html"><img src="dura-fX2_01.png" class="card-img-top" alt="object1"></a>
+                        <div class="card-body">
+                        <h5 class="card-title">Object 1</h5>
+                        <p class="card-text">Description of object</p>
+                        <a href="scratch_object.html" class="btn btn-primary stretched-link">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="card mx-5">
+                        <a href="scratch_object.html"><img src="dura-fX2_01.png" class="card-img-top" alt="object2"></a>
+                        <div class="card-body">
+                        <h5 class="card-title">Object 2</h5>
+                        <p class="card-text">Description of object</p>
+                        <a href="scratch_object.html" class="btn btn-primary stretched-link">Learn More</a>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="card-deck cardfontcolor d-flex justify-content-center">
+                    <div class="card mx-5">
+                        <a href="scratch_object.html"><img src="dura-fX2_01.png" class="card-img-top" alt="object3"></a>
+                        <div class="card-body">
+                        <h5 class="card-title">Object 3</h5>
+                        <p class="card-text">Description of object</p>
+                        <a href="scratch_object.html" class="btn btn-primary stretched-link">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="card mx-5">
+                        <a href="scratch_object.html"><img src="dura-fX2_01.png" class="card-img-top" alt="object4"></a>
+                        <div class="card-body">
+                        <h5 class="card-title">Object 4</h5>
+                        <p class="card-text">Description of object</p>
+                        <a href="scratch_object.html" class="btn btn-primary stretched-link">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <br>
+                <div class="border-top">
+                <br>
+                        <p>Contact: <a href="mailto:cog@yale.edu">cog@yale.edu</a></p>
+                </div>
+            </main>
+        </div>
+    </body>
 
 </html>
