Added sample bounding box

--- a/scratch_object.html
+++ b/scratch_object.html
@@ -44,12 +44,25 @@
             <main class="container p-5">
 
                 <div class="wid">
-                    <h1> Object 1 </h1>
-                    <img src="dura-fX2_01.png" alt="object1">
+                    <a href="#explanation">
+                        <h1> Object 1 </h1>
+                    </a>
+                    <div class="image-wrap">
+                        <img src="dura-fX2_01.png" alt="object1" class="img-fluid">
+                        <a href="#explanation">
+                            <div style="position: absolute; top: 25%; left: 25%; border: solid blue; padding-bottom: 10%; padding-right:50%">
+                                
+                            </div>
+                        </a>
+
+                        </div>
+                    </div>
                     <br>
                     <h3>Inscription 1</h5>
                     <h4>Translation</h4>
-                    <p> Explaination of what is going on </p>
+                    <a id="explanation">
+                        <p> Explaination of what is going on </p>
+                    </a>
                     <img src="dura-satellite.jpg" alt="locational image">
                 </div>
                 <br>
